// --- Thực thể chính ---
Table users {
  id bigserial [pk]
  username varchar(255) [not null, unique]
  password varchar(255) [not null]
  total_point integer [default: 0]
  total_time integer [default: 0]
  image_url varchar(500)
  created_at timestamp [default: `now()`]
  updated_at timestamp
}

Table music {
  id bigserial [pk]
  name varchar(500) [not null]
  music_url varchar(500) [not null, unique]
  duration integer [not null]
  required_point integer [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

Table backgrounds {
  id bigserial [pk]
  name varchar(500) [not null, unique]
  background_url varchar(500) [not null, unique]
  required_points integer [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
}

// --- Log Phiên học ---
Table study_sessions {
  id bigserial [pk]
  user_id bigint [ref: > users.id]
  start_time timestamp [default: `now()`]
  end_time timestamp
  points_earned integer [default: 0]
  diff_time integer // Lưu kết quả endTime - startTime (giây) để dễ tính toán báo cáo
}

// --- Quan hệ Sở hữu & Lưu trữ ---
Table user_unlocked_music {
  id bigserial [pk]
  user_id bigint [ref: > users.id]
  music_id bigint [ref: > music.id]
  unlocked_at timestamp [default: `now()`]
  spent_points integer
  Indexes { (user_id, music_id) [unique] }
}

Table user_unlocked_backgrounds {
  id bigserial [pk]
  user_id bigint [ref: > users.id]
  background_id bigint [ref: > backgrounds.id]
  unlocked_at timestamp [default: `now()`]
  spent_points integer
  Indexes { (user_id, background_id) [unique] }
}

Table music_saved {
  id bigserial [pk]
  user_id bigint [ref: > users.id]
  music_id bigint [ref: > music.id]
  Indexes { (user_id, music_id) [unique] }
}
